--- a/public/index.html
+++ b/public/index.html
@@ -29,13 +29,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-      <div id="fb-root"></div>
+    <div id="root"></div>
+    <div id="fb-root"></div>
 
       <!-- Your Wtyczka czatu code -->
       <div id="fb-customer-chat" class="fb-customerchat">
       </div>
-    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
